add ransank to search

--- a/app/views/courses/_schd_search_bar.html.erb
+++ b/app/views/courses/_schd_search_bar.html.erb
@@ -48,7 +48,7 @@
 				<input type="hidden" id="search_type" value="course_name">
 				<input type="text" class="form-control" id="search_term" placeholder="Search..." >
 				<span class="input-group-btn"><!--type="submit"-->
-					<button class="btn btn-default" onclick="search_keyword()"><span class="glyphicon glyphicon-search"></span></button>
+					<button class="btn btn-default" onclick="search_keyword(1)"><span class="glyphicon glyphicon-search"></span></button>
 				</span>
 			</div><!-- /input-group -->
 		</div>
