--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -20,6 +20,12 @@ body
 .no-padding-left{
 	padding-left:0px;
 }
+.no-padding-top{
+	padding-top:0px;
+}
+.no-padding-bottom{
+	padding-bottom:0px;
+}
 .no-padding-right{
 	padding-right:0px;
 }
@@ -27,13 +33,17 @@ body
 .no-margin-left{
 	margin-left:0px;
 }
+.no-margin-right{
+	margin-right:0px;
+}
+.no-margin-top{
+	margin-top:0px;
+}
 .no-margin-bottom{
 	margin-bottom:0px ;
 }
 
-.no-padding-right{
-	padding-right:0px;
-}
+
 
 textcontent{
 	white-space: pre-line;
