--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,21 +1,22 @@
 <script>
 	$(document).ready(function(){
-	
+
 		$("#filter").keyup(function(){
 			$("#course_table tr:not(:visible)").show();
 			$("#course_table tr:not(:first, :contains("+$("#filter").val()+"))").hide();
 			
 		});
 	});
+	
 </script>
 <%= render :partial=>"search_js" %>
 
 <div class="form-inline" ><!--role="form"-->
 	<div class="row">
-		<div class="form-group col-sm-1">
+		<div class="form-group col-sm-1 col-sm-offset-2">
 		<label class="pull-right" style="margin-top:6px;">By 系所</label>
 		</div>
-		<div class="form-group col-sm-2  ">
+		<div class="form-group col-sm-1 ">
 			
 			<div class="input-group">
 				<!--<span class="input-group-addon">
@@ -64,9 +65,7 @@
 				</div>	<!-- /btn-group -->
 			</div>	<!-- /input-group --> 
 		</div>	<!-- /form-group -->
-		<div class="form-group col-sm-3 ">
-			<input type="text" class="form-control" id="filter" placeholder="過濾...">
-		</div>
+		
 		<!--<div class="form-group col-sm-3 ">
 			<div class="input-group">
 				
@@ -83,7 +82,7 @@
 				<input type="text" class="form-control" id="search_term" placeholder="Search..." >
 				
 				<span class="input-group-btn">
-					<button id="search-btn" class="btn btn-default" onclick="search_keyword()"><span class="glyphicon glyphicon-search"></span></button>
+					<button id="search-btn" class="btn btn-default" onclick="search_keyword(1)"><span class="glyphicon glyphicon-search"></span></button>
 				</span>
 
 			</div>
@@ -100,7 +99,7 @@
 	<div class="form-group col-sm-1 col-md-offset-3">
 		<label class="pull-right" style="margin-top:6px;">By 關鍵字</label>
 	</div>
-			<div class="form-group col-sm-4 ">
+			<div class="form-group col-sm-3 ">
 			<div class="input-group">
 				
 				<div class="input-group-btn">
@@ -116,12 +115,14 @@
 				<input type="text" class="form-control" id="search_term" placeholder="Search..." >
 				
 				<span class="input-group-btn"><!--type="submit"-->
-					<button id="search-btn" class="btn btn-default" onclick="search_keyword()"><span class="glyphicon glyphicon-search"></span></button>
+					<button id="search-btn" class="btn btn-default" onclick="search_keyword(1)"><span class="glyphicon glyphicon-search"></span></button>
 				</span>
 
 			</div><!-- /input-group -->
 		</div>
-
+	<div class="form-group col-sm-2 ">
+			<input type="text" class="form-control" id="filter" placeholder="過濾..." readonly>
+	</div>
 </div>
 
 
