--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   
-  <%= javascript_include_tag "#{params[:controller]}" %>
-<!-- <script src='https://www.google.com/jsapi'></script>  -->
+  <% javascript_include_tag "#{params[:controller]}" %>
+
 
   <%= csrf_meta_tags %>
 	<meta property="og:title" content="NCTU+" />
@@ -35,12 +35,7 @@
 	<div class="row">
 
 		<div id="content" class="col-md-12 col-md-offset-">
-			<% if flash[:notice] %>
-			<div id="notice" class="col-md-9 col-md-offset-2 alert <%= flash[:notice][:style] %>"style="z-index:2000;">
-				<h4><%= flash[:notice][:title] %></h4>
-				<%= flash[:notice][:message] %>
-			</div>
-			<% end %>
+			
 			<div id="global_bgcolor" class="well global-background-color" >
 			<%= yield %>
 			</div>
@@ -54,6 +49,9 @@
 </body>
 <script>
 	$(document).ready(function() {
+		<% if flash[:notice] %>
+			alert("<%= flash[:notice][:title] %> <%= flash[:notice][:message] %>");
+		<% end %>
 		$('.masterTooltip').hover(function(){
 						// Hover over code
 						var title = $(this).attr('title');
