--- a/app/views/user/_this_semester.html.erb
+++ b/app/views/user/_this_semester.html.erb
@@ -21,8 +21,14 @@
 			<%=link_to "/courses/simulation", class:"btn btn-primary" do %>
 				<%=fa_icon "plus" %>新增課程
 			<% end %>
-			<%=link_to "/user/import_course", class:"btn btn-primary" do %>
-				<%=fa_icon "upload" %>匯入課程
+			<% if current_user.department.nil? %>
+				<button onclick="alert('請先輸入系級,謝謝!');$('#degree_select').focus();", class="btn btn-primary">
+					<%=fa_icon "upload" %>匯入課程
+				</button>
+			<% else %>
+				<%=link_to "/user/import_course", class:"btn btn-primary" do %>
+					<%=fa_icon "upload" %>匯入課程
+				<% end %>
 			<% end %>
 		</div>
 	</div>
