--- a/app/views/user/_this_semester.html.erb
+++ b/app/views/user/_this_semester.html.erb
@@ -17,21 +17,41 @@
 		</div>
 		<div class="col-md-4"><% unless current_user.department.nil? %>
 			<button class="btn btn-success" onclick="show_form($(this));">修改系級</button>
-			<% end %>
-			<%=link_to "/courses/simulation", class:"btn btn-primary" do %>
-				<%=fa_icon "plus" %>新增課程
-			<% end %>
-			<% if current_user.department.nil? %>
-				<button onclick="alert('請先輸入系級,謝謝!');$('#degree_select').focus();", class="btn btn-primary">
-					<%=fa_icon "upload" %>匯入課程
-				</button>
-			<% else %>
-				<%=link_to "/user/import_course", class:"btn btn-primary" do %>
-					<%=fa_icon "upload" %>匯入課程
-				<% end %>
-			<% end %>
+		<% end %>
+		<%=link_to "/courses/simulation", class:"btn btn-primary" ,id: "add_course" do %>
+			<%=fa_icon "plus" %>新增課程
+		<% end %>
+		<%=link_to current_user.department.present? ? "/user/import_course":"javascript:void(0);" , class:"btn btn-primary",id:"import_course", onclick:"no_dept_alert();" do %>
+			<%=fa_icon "upload" %>匯入課程
+		<% end %>
+			
 		</div>
 	</div>
 	<br>
 	<%= render :partial=>"/user/table_list_by_costype", locals: {cd_mixed: @cd_this_mixed, table_class:"this_sem_table"} %>
 </div>
+
+
+<script>
+<% if current_user.department.nil? %>
+	function no_dept_alert(){	
+		alert('請先輸入系級,謝謝!');
+		$('#degree_select').focus();
+	}
+<% end %>
+	$(function(){
+		$("#add_course").popover({ 
+			content: "按此手動輸入課程",
+			placement:"auto",
+			trigger : "click",
+			container :"body"
+		}).popover('show');
+		$("#import_course").popover({ 
+			content: "匯入歷年課程",
+			placement:"auto",
+			trigger : "click",
+			container :"body",
+			placement :"bottom"
+		}).popover('show');
+	});		
+</script>
