--- a/app/views/course_details/_common_js.html.erb
+++ b/app/views/course_details/_common_js.html.erb
@@ -1,7 +1,7 @@
 <script>
 	function clean_input(obj){
 		obj.next().val("");
-		$("#search").click();
+		//$("#search").click();
 	}
 	$(function(){
 		var dept_sel=[];
@@ -11,7 +11,23 @@
 		$("#degree").change(function(){
 			
 			$("#q_course_department_id_eq").html(dept_sel[$(this).val()]);
-			
+			$('#search').click();
 		});
+		
+		<% if params[:q]&&@cd_all.empty? %>
+			<% if params[:q].fetch(:teacher_name_cont,"").length==2 %>
+				$("#q_teacher_name_cont").popover({ 
+					content: "試著在名字間加入空白",
+					placement:"bottom",
+					trigger : "click",
+					container :"body",
+					
+				}).popover('show');
+			<% end %>
+		<% end %>
+
+
+		
+
 	});
 </script>
