--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -41,10 +41,10 @@
 </div>
 
 
-	<div class="col-md-11" style="position:absolute;margin-top:30%;margin-bottom:5%;height:200px; background-color: rgba(255,255,255, 0); z-index:1000; ">
+	<div class="col-md-11" style="position:absolute;margin-top:30%;margin-bottom:3%;height:200px; background-color: rgba(255,255,255, 0); z-index:1000; ">
 		<div class="row">
 		
-			<div class="container icon-container" style="margin-left:40%;" >
+			<div class="container icon-container" style="margin-left:30%;" >
 				<div class="row row-margin" >
 				<div class="circle clickable-hover" href="/course_details/">
 					<%=fa_icon "search 5x" %>
@@ -54,7 +54,18 @@
 				<p class="text-center function-desc" style="">找課程</p>
 				
 			</div>
-			<div class="container icon-container" style="margin-left:100px;">
+			<div class="container icon-container" >
+				<div class="row row-margin">
+				<div class="circle clickable-hover" href="/course_details/">	
+					<%=fa_icon "file-text-o 5x" %>
+					
+				</div>
+				<p class="text-center function-desc" >找考古題</p>
+
+				</div>
+			</div>
+			
+			<div class="container icon-container" style="">
 				<div class="row row-margin">
 				<div class="circle clickable-hover" href="/user/special_list">
 					<%=fa_icon "graduation-cap 5x" %>
@@ -65,16 +76,7 @@
 				</div>
 			</div>
 <!--
-			<div class="container icon-container" >
-				<div class="row row-margin">
-				<div class="circle clickable-hover" href="#">	
-					<%=fa_icon "file-text-o 5x" %>
-					
-				</div>
-				<p class="text-center function-desc" >找考古題</p>
-
-				</div>
-			</div>
+			
 			
 			
 			<div class="container icon-container">
