--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -202,9 +202,12 @@ background-color: black  ;
 	border-left-color: #5bc0de;
 }
 
-.test{
-//box-shadow:1px 1px 2px rgba(100%,0%,0%,0.4),1px -1px 2px rgba(0%,100%,0%,0.4),3px 4px 2px rgba(0%,0%,100%,0.4);
+.border-info{
+	border-top-color: #5bc0de;
+	border-bottom-color: #5bc0de;
+	border-right-color: #5bc0de;
 }
+
 
 .bs-callout-info {
 	border-left-color: #5bc0de;
