statics add phe and service,art

--- a/app/views/user/_table_list_by_costype.html.erb
+++ b/app/views/user/_table_list_by_costype.html.erb
@@ -2,7 +2,7 @@
 		
 		<% cos_types=[] %>
 		<% credits=[] %>
-		<% cd_mixed.each do |cd,course,teacher|%>
+		<% cd_mixed.each do |cd|%>
 			<% if !cos_types.include?(cd.cos_type) %>
 				<% cos_types.append(cd.cos_type) %>
 				<tr class="row"><th colspan="3" class="<%=cos_type_class(cd.cos_type)%>"><%=cd.cos_type%></th></tr>
@@ -12,22 +12,25 @@
 			<% end %>
 		<tr class="row">
 		<td class="col-md-6">
-			<h4 class="text-center"><%= link_to course.ch_name, course_path(course, :tid=>teacher.id) %>
+			<h4 class="text-center"><%= link_to cd.course.ch_name, course_path(cd.course, :tid=>cd.teacher.id) %>
 				<%= link_to cd.temp_cos_id, "https://cos.adm.nctu.edu.tw/Course/CrsOutline/show.asp?Acy="<<cd.semester.year<<"&Sem="<<cd.semester.half<<"&CrsNo="<<cd.temp_cos_id, :target=>"_blank" %> | 
 				
-				<%=teacher.name %> | 
+				<%=cd.teacher.name %> | 
 				<%= fa_icon "user" %> <strong><%=CourseSimulation.where(:course_detail_id=>cd.id).count%></strong> | 
 				<%= fa_icon "graduation-cap" %> <strong><%=cd.credit%></strong>
 				</h4>
 			</td>
 			<td class="col-md-6">
 			<div class="container" style="display:inline-block;">
-				
-				<%= link_to "考古題", course_path(course, :tid=>teacher.id, :first_show=>"files"), :class=>"btn btn-sm btn-default" %>
-				<div class="number-right-top" ><%=cd.course_teachership.file_infos.count%></div>
-				<%= link_to "討論區", course_path(course, :tid=>teacher.id, :first_show=>"discussion"), :class=>"btn btn-sm btn-default" %>
-				<%ct=CourseTeachership.where(:course_id=>course.id, :teacher_id=>teacher.id).take%>
-				<div class="number-right-top" ><%=ct.discusses.count%></div>
+				<%ct=cd.course_teachership%>
+				<%= link_to "考古題", course_path(cd.course, :tid=>cd.teacher.id, :first_show=>"files"), :class=>"btn btn-md btn-default" %>
+				<% if ct.file_infos.count>0 %>
+				<div class="number-right-top" ><p style="margin-left:-1px"><%=ct.file_infos.count%></p></div>
+				<% end %>
+				<%= link_to "討論區", course_path(cd.course, :tid=>cd.teacher.id, :first_show=>"discussion"), :class=>"btn btn-md btn-default" %>
+				<% if ct.discusses.count>0 %>
+				<div class="number-right-top" ><p style="margin-left:-1px"><%=ct.discusses.count%></p></div>
+				<% end %>
 			</div>
 
 			</td>
