--- a/app/views/user/_this_semester.html.erb
+++ b/app/views/user/_this_semester.html.erb
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 	<br>
-	<%= render :partial=>"/user/table_list_by_costype", locals: {cd_mixed: @cd_this_mixed, table_class:"this_sem_table"} %>
+	<%= render :partial=>"/user/table_list_by_costype", locals: {cd_mixed: @cd_this, table_class:"this_sem_table"} %>
 </div>
 
 
