--- a/app/views/user/_statics.html.erb
+++ b/app/views/user/_statics.html.erb
@@ -8,33 +8,132 @@
 	</div>
 	
 	<br>
+	<% if current_user.department.present? && current_user.department.degree=='3' %>
 	<table class="table table-bordered ">
-		<tr class="row ">
-			<td class="col-md-8 course-general" colspan="7">
-				<p class="text-center no-margin-bottom">通識</p>
+		
+		<tr class="row">
+			<td rowspan="2" class="col-md-2" style="vertical-align:middle"><h4 class="text-center">服務學習</h4></td>
+			<td class="col-md-3" colspan="3"><p class="text-center no-margin-bottom">一</p></td>
+			<td class="col-md-3" colspan="3"><p class="text-center no-margin-bottom">二</p></td>
+		</tr>
+		<% cs_service_1 = @cd_all_sem.select{|cd|cd.course.ch_name.include?('服務學習')&&cd.course.ch_name.include?('一')} %>
+		<% cs_service_2 = @cd_all_sem.select{|cd|cd.course.ch_name.include?('服務學習')&&cd.course.ch_name.include?('二')} %>
+		<tr class="row">
+			
+			<td class="col-md-3" colspan="3">
+				<% if cs_service_1.length>0 %>
+				<p class="text-center no-margin-bottom">
+				<%= fa_icon "check 2x", style:"color:#5cb85c" %>
+				</p>
+				<% end %>
+			</td>
+			<td class="col-md-3" colspan="3">
+				<% if cs_service_2.length>0 %>
+				<p class="text-center no-margin-bottom">
+				<%= fa_icon "check 2x", style:"color:#5cb85c" %>
+				</p>
+				<% end %>
+			</td>
+			
+		</tr>
+		
+		<tr class="row">
+			<td rowspan="2" class="col-md-2" style="vertical-align:middle"><h4 class="text-center">藝文賞析</h4></td>
+			<td class="col-md-3" colspan="3"><p class="text-center no-margin-bottom">上</p></td>
+			<td class="col-md-3" colspan="3"><p class="text-center no-margin-bottom">下</p></td>
+		</tr>
+		<% cs_art_1 = @cd_all_sem.select{|cd|cd.brief=="藝文賞析"&&cd.course.ch_name.include?('一')} %>
+		<% cs_art_2 = @cd_all_sem.select{|cd|cd.brief=="藝文賞析"&&cd.course.ch_name.include?('二')} %>
+		<tr class="row">
+			
+			<td class="col-md-3" colspan="3">
+				<% if cs_art_1.length>0 %>
+				<p class="text-center no-margin-bottom">
+					<%= fa_icon "check 2x", style:"color:#5cb85c" %>
+				</p>
+				<% end %>
+			</td>
+			<td class="col-md-3" colspan="3">
+					<% if cs_art_2.length>0 %>
+					<p class="text-center no-margin-bottom">
+						<%= fa_icon "check 2x", style:"color:#5cb85c" %>
+					</p>
+					<% end %>
 			</td>
 		</tr>
-		<% cs_common=@cd_all.select{|cd|cd.cos_type=="通識"} %>
+		<% cs_phe=@cd_all_sem.select{|cs|cs.brief[0..1]=="體育"} %>
+		<% cs_phe_1=cs_phe.select{|cs|cs.course.ch_name=="大一體育"} %>
+		<% cs_phe_needed=cs_phe.select{|cs|cs.course.ch_name[0..1]=="體育"} %>
+		<tr class="row">
+			<td rowspan="2" class="col-md-2" style="vertical-align:middle"><h4 class="text-center">體育</h4></td>
+			<td class="col-md-1"><p class="text-center no-margin-bottom">大一</p></td>
+			<td class="col-md-1"><p class="text-center no-margin-bottom">大一</p></td>
+			<td class="col-md-1"><p class="text-center no-margin-bottom">選修</p></td>
+			<td class="col-md-1"><p class="text-center no-margin-bottom">選修</p></td>
+			<td class="col-md-1"><p class="text-center no-margin-bottom">選修</p></td>
+			<td class="col-md-1"><p class="text-center no-margin-bottom">選修</p></td>
+		</tr>
+		<tr class="row">
+		
+		<% output="" %>
+		<% (0..1).each do |i| %>
+			<% output<<'<td class="col-md-1">' %>
+			<% if cs_phe_1[i].present? %>
+				<% output<<'<p class="text-center no-margin-bottom">'%>
+				<% output<<fa_icon("check 2x", style:"color:#5cb85c") %>
+				<% output<<'</p>'%>
+			<% end %>
+			<% output<<'</td>' %>	
+		<% end %>
+		<%=output.html_safe%>
+		
+		<% output="" %>
+		<% (0..3).each do |i| %>
+			<% output<<'<td class="col-md-1">' %>
+			<% if cs_phe_needed[i].present? %>
+				<% output<<'<p class="text-center no-margin-bottom">'%>
+				<% output<<fa_icon("check 2x", style:"color:#5cb85c") %>
+				<% output<<'</p>'%>
+			<% end %>
+			<% output<<'</td>' %>	
+		<% end %>
+		<%=output.html_safe%>
+
+		</tr>
+		<% cs_foreign=@cd_all_sem.select{|cs|cs.cos_type=="外語"} %>
+		<% cs_foreign_basic=cs_foreign.select{|cs|cs.brief=="基礎"} %>
+		<% cs_foreign_basic_credit=cs_foreign_basic.map{|cs|cs.credit.to_i}.reduce(:+)||0 %>
+		<% cs_foreign_advanced=cs_foreign.select{|cs|cs.brief=="進階"||cs.brief=="其它"} %>
+		<% cs_foreign_advanced_credit=cs_foreign_advanced.map{|cs|cs.credit.to_i}.reduce(:+)||0 %>
+		<% cs_foreign_dimension=cs_foreign.map{|cs|cs.brief} %>
+		<tr class="row">
+			<td class="col-md-2" >
+				<h4 class="text-center ">外文</h4>
+			</td>
+
+			<td colspan="6">
+				<div class="progress no-margin-bottom">
+					<div class="progress-bar progress-bar-success" style="width: <%=(cs_foreign_basic_credit*66.7)/4 %>%">
+						<span>基礎 <strong><%=cs_foreign_basic_credit%>/4</strong></span>
+					</div>
+					<div class="progress-bar" role="progressbar" style="width: 33.3%;">
+						<span >進階(其他) <strong><%=cs_foreign_advanced_credit%>/2</strong></span>
+					</div>
+				</div>
+			</td>
+		</tr>
+		
+		<% cs_common=@cd_all_sem.select{|cd|cd.cos_type=="通識"} %>
 		<% cs_common_basic=cs_common.select{|cs|cs.brief.partition('/')[0]!="通識"} %>
 		<% cs_common_world=cs_common.select{|cs|cs.brief.partition('/')[0]=="通識"} %>
 		<% cs_common_basic_credit=cs_common_basic.map{|cd|cd.credit.to_i}.reduce(:+)||0 %>
 		<% cs_common_world_credit=cs_common_world.map{|cs|cs.credit.to_i}.reduce(:+)||0 %>
 		<% cs_common_dimension=cs_common.map{|cs|cs.brief.partition('/')[0]} %>
+		
 		<tr class="row">
-			<td><p class="text-center ">學分</p></td>
-			<td colspan="6">
-				<div class="progress no-margin-bottom">
-					<div class="progress-bar dimension-world" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 20%;">		
-						<span>當代 <strong><%=cs_common_world_credit%>/2</strong></span>
-					</div>		
-					<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%=cs_common_basic_credit*100/22%>%;">		
-						<span class="<%=cs_common_basic_credit==0?"sr-only":""%>">其他 <strong><%=cs_common_basic_credit%>/18</strong></span>
-					</div>
-				</div>
+			<td rowspan="3" style="vertical-align:middle">
+				<h4 class="text-center no-margin-bottom" style="line-">通識</h4>
 			</td>
-		</tr>
-		<tr class="row">
-		<td class="col-md-2" rowspan="2"><p class="text-center">向度</p></td>
 			<% common_dimension.each do |key,value| %>
 				<td class="dimension-<%=value%>">
 				<p class="text-center no-margin-bottom">
@@ -59,49 +158,52 @@
 		<% end %>
 		</tr>
 		
-		<tr class="row ">
-			<td class="col-md-10 course-foreign" colspan="7">
-				<p class="text-center no-margin-bottom">外文</p>
-			</td>
-		</tr>
-		<% cs_foreign=@cd_all.select{|cs|cs.cos_type=="外語"} %>
-		<% cs_foreign_basic=cs_foreign.select{|cs|cs.brief=="基礎"} %>
-		<% cs_foreign_basic_credit=cs_foreign_basic.map{|cs|cs.credit.to_i}.reduce(:+)||0 %>
-		<% cs_foreign_advanced=cs_foreign.select{|cs|cs.brief=="進階"||cs.brief=="其它"} %>
-		<% cs_foreign_advanced_credit=cs_foreign_advanced.map{|cs|cs.credit.to_i}.reduce(:+)||0 %>
-		<% cs_foreign_dimension=cs_foreign.map{|cs|cs.brief} %>
 		<tr class="row">
-			<td><p class="text-center">學分</p></td>
+			
 			<td colspan="6">
 				<div class="progress no-margin-bottom">
-					<div class="progress-bar progress-bar-success" style="width: <%=(cs_foreign_basic_credit*66.7)/4 %>%">
-						<span>基礎 <strong><%=cs_foreign_basic_credit%>/4</strong></span>
-					</div>
-					<div class="progress-bar" role="progressbar" style="width: 33.3%;">
-						<span >進階(其他) <strong><%=cs_foreign_advanced_credit%>/2</strong></span>
+					<div class="progress-bar dimension-world" style="width: 20%;">		
+						<span>當代 <strong><%=cs_common_world_credit%>/2</strong></span>
+					</div>		
+					<div class="progress-bar" role="progressbar" style="width: <%=cs_common_basic_credit*100/18 - 20 > 80 ? 80 : cs_common_basic_credit*100/18 - 20 %>%;">		
+						<span class="<%=cs_common_basic_credit==0?"sr-only":""%>">其他 <strong><%=cs_common_basic_credit%>/18</strong></span>
 					</div>
 				</div>
 			</td>
 		</tr>
-		<tr class="row ">
+		
+		
+
+		
+
+		
+		
+		
+		
+		
+		<!--
+		<tr class="row">
 			<td class="col-md-10 label-info" colspan="7">
 				<p class="text-center no-margin-bottom">Total</p>
 			</td>
 		</tr>
+		<% if current_user.department.credit.present? %>
 		<tr class="row">
 			<td><p class="text-center">學分</p></td>
 			<td colspan="6">
 				<div class="progress no-margin-bottom">
 				<% all_credit=@cd_all.map{|cd|cd.credit.to_i}.reduce(:+)||0 %>
-					<div class="progress-bar progress-bar-info" style="width: <%=(all_credit*100/128) %>%">
-						<span><strong><%=all_credit%>/128</strong></span>
+					<div class="progress-bar progress-bar-info" style="width: <%=(all_credit*100/128)>10?(all_credit*100/128):10 %>%">
+						<span><strong><%=all_credit%>/<%=current_user.department.credit%></strong></span>
 					</div>
 
 				</div>
 			</td>
 		</tr>
-		
+		-->
+		<% end %>
 	</table>
+	<% end %>
 	<br>
 	<div class="row" style="margin-top:2px;">
 		<div class="col-md-2 col-md-offset-2">
@@ -119,6 +221,6 @@
 		</div>
 	</div>
 	<br>
-	<%= render :partial=>"/user/table_list_by_costype", locals: {cd_mixed: @cd_all_mixed, table_class:"statics_table"} %>
+	<%= render :partial=>"/user/table_list_by_costype", locals: {cd_mixed: @cd_all, table_class:"statics_table"} %>
 	<%= render :partial=>"/user/table_list_by_semester", locals: {table_class:"statics_table"} %>
 </div>
