change to no dropbox

--- a/app/views/user/_table_list_by_costype.html.erb
+++ b/app/views/user/_table_list_by_costype.html.erb
@@ -49,7 +49,7 @@
 		</td>
 	</tr>
 	
-	<tr class="row label-info">
+	<!--<tr class="row label-info">
 		<td colspan="2" class="info">
 			<h4 class="text-right">
 			
@@ -57,10 +57,10 @@
 				<% @cd_all_cos_type_credit.each do |type,credit| %>
 					<%=type%> : <strong><%=credit.round%></strong>
 				<% end %>
-				<!--<% if !current_user.department.nil?&&!current_user.department.credit.nil? %>
+				<% if !current_user.department.nil?&&!current_user.department.credit.nil? %>
 				離畢業還差 <strong><%=current_user.department.credit-@cd_all_sum%></strong> 學分
-				<% end %>-->
+				<% end %>
 			</h4>
 		</td>
-	</tr>
+	</tr>-->
 </table>
