--- a/app/views/courses/_show_teacherOnCourse.html.erb
+++ b/app/views/courses/_show_teacherOnCourse.html.erb
@@ -97,6 +97,8 @@
 			<i class="fa fa-cube"></i> 作業/考試：
 			<%if current_user%>
 				<%=link_to "編輯", "javascript:void(0);", :onclick=>"loadForm("+courseTeacher.id.to_s+",$(this),'head');", :id=>"link_edit_head"%>	
+			<% else %>
+				<%=link_to "編輯", "javascript:void(0);", :onclick=>"alert('請先登入謝謝');", :id=>"link_edit_head"%>			
 			<% end %>
 			<span id="toggle-msg-head" style="display:none;"></span>
 			</br></br>
@@ -109,7 +111,9 @@
 			<div class="row">
 			<i class="fa fa-cube"></i> 其他內容：
 			<%if current_user%>
-				<%=link_to "編輯", "javascript:void(0);", :onclick=>"loadForm("+courseTeacher.id.to_s+",$(this),'list');", :id=>"link_edit_head"%>	
+				<%=link_to "編輯", "javascript:void(0);", :onclick=>"loadForm("+courseTeacher.id.to_s+",$(this),'list');", :id=>"link_edit_head"%>
+			<% else %>
+				<%=link_to "編輯", "javascript:void(0);", :onclick=>"alert('請先登入謝謝');", :id=>"link_edit_head"%>
 			<% end %>
 			<span id="toggle-msg-list" style="display:none;"></span>
 			</br></br>
@@ -156,7 +160,8 @@
 					</div>	
 			<%end%>
 				</div>	
-				
+		<% else %>
+				<%=link_to "留言", "javascript:void(0);", :onclick=>"alert('請先登入謝謝');", :id=>"comment_post_link"%>		
 		<% end %> <!-- current_user -->
 			</p>	
 		</h2>	
