--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	
-	<div class="col-md-10 scroll-content">
+	<div class="col-md-9 scroll-content col-md-offset-1">
 		<div class="row">
 			<div class="col-md-7">
 				<h1 class="scroll-title" id="course-name" data-offset="100">	
