--- a/app/views/user/import_course.html.erb
+++ b/app/views/user/import_course.html.erb
@@ -4,7 +4,7 @@
 	0.請注意!匯入前會將非本學期的課程先<strong>清空!</strong><br>
 	1.至註冊組 <%=link_to "學籍成績系統","https://regist.nctu.edu.tw/", target:"blank"%> 登入<br>
 	2.點選「歷年成績查詢」按鈕<br>
-	3.全選(ctrl+a)右方成績頁面的內容並複製(cltr+c)，如<%=link_to "此圖", "/assets/import_course.jpg", target:"blank"%><br>
+	3.全選(ctrl+a)右方成績頁面的內容並複製(cltr+c)，如<%=link_to "此圖", asset_path("import_course.jpg"), target:"blank"%><br>
 	4.貼上至下方表單並送出<br>
 	PS.無法匯入抵免課程或免修課程<br>
 	PS<sub>2</sub>.系統會判斷該門課是否及格，但我們不會保留您的成績，請放心~
