--- a/app/views/courses/content_head_form.html.erb
+++ b/app/views/courses/content_head_form.html.erb
@@ -26,7 +26,7 @@
 		</br></br>  	
 <span class="col-sm-10">
 點名頻率：
-<%= select_tag :rollcall, options_for_select([["每堂必點",1],["經常抽點",2],["偶爾抽點",3],["不點名",4]]) %>
+<%= select_tag :rollcall, options_for_select([["每堂必點",1],["經常抽點",2],["偶爾抽點",3],["不點名",4]],@head.course_rollcall) %>
 </span>
 <span class="col-sm-2">
 		<button type="button" class="btn btn-info" onclick="return headSubmit();">確認修改</button>
