fix assets problem and upload bug

--- a/app/views/file_infos/_template_upload.html.erb
+++ b/app/views/file_infos/_template_upload.html.erb
@@ -16,7 +16,7 @@
   {% for (var i=0, file; file=o.files[i]; i++) { %}
   <tr class="template-upload fade" >
     
-    <input type="hidden" name="file_info[course_teachership_id]" value="<%=@ct_id%>">
+    <input type="hidden" class="upload_ct_id" name="file_info[course_teachership_id]" value="">
     <!--<td class="preview"><span class="fade"></span></td>-->
     <td>0</td>
 	<td class="semester"><span>
